Fixed cards alignment for mobile

--- a/css/aaa-games.css
+++ b/css/aaa-games.css
@@ -318,7 +318,7 @@ footer .footer-text {
 
 	ul.card {
 		width: 40%;
-		margin-left: 33%;
+		margin-left: 30%;
 	}
 
 	ul.gamemodeicons1,
@@ -336,7 +336,7 @@ footer .footer-text {
 	
 	ul.loading-animation {
 		width: 100px;
-		margin-left: 48%;
+		margin-left: 45.2%;
 	}
 
 	ul.allstar20,
